--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -30,38 +30,43 @@
 
                      <h2>Group One</h2>
 
-                     <a class="tile wide imagetext bg-color-orange" href="./metro-layouts.html">
+                     <a class="tile app bg-color-orange" href="#">
                         <div class="image-wrapper">
-                           <img src="assets/img/metro-tiles.jpg" />
+                           <span class="icon icon-mail"></span>
+                        </div>
+                        <div class="app-label">Mail</div>
+                        <div class="app-count">12</div>
+                     </a>
+
+                     <a class="tile app bg-color-blue" href="#">
+                        <div class="image-wrapper">
+                           <span class="icon icon-map"></span>
+                        </div>
+                        <div class="app-label">Map</div>
+                     </a>
+
+                     <a class="tile wide imagetext bg-color-greenDark" href="#">
+                        <div class="image-wrapper">
+                           <span class="icon icon-chat-2"></span>
                         </div>
                         <div class="column-text">
-                           <div class="text4">Demos of various Metro style layouts.</div>
+                           <div class="text4">Chat with your friends</div>
                         </div>
-                        <div class="app-label">Layouts</div>
+                        <div class="app-label">145 friends online</div>
                      </a>
 
-                     <a class="tile wide imagetext bg-color-blueDark" href="./tiles-templates.html">
+                     <a class="tile app bg-color-purple" href="#">
                         <div class="image-wrapper">
-                           <img src="assets/img/metro-tiles.jpg" />
+                           <span class="icon icon-weather"></span>
                         </div>
-                        <div class="column-text">
-                           <div class="text4">List of all tile templates: square, wide, widepeek, with images or text only.</div>
-                        </div>
-                        <div class="app-label">Tiles Templates</div>
+                        <div class="app-label">Weather</div>
                      </a>
 
-                     <a class="tile wide imagetext wideimage bg-color-orange" href="./appbar-demo.html">
-                        <img src="assets/img/appbar.png" alt=""/>
-                        <div class="textover-wrapper bg-color-blue">
-                           <div class="text2">Application Bar</div>
-                        </div>
-                     </a>
-
-                     <a class="tile app square bg-color-greenDark" href="./table.html">
+                     <a class="tile app bg-color-green" href="#">
                         <div class="image-wrapper">
-                           <img src="assets/img/My Apps.png" alt=""/>
+                           <span class="icon icon-linkedin"></span>
                         </div>
-                        <div class="app-label">Styled Table</div>
+                        <div class="app-label">LinkedIn</div>
                      </a>
 
                   </div>
@@ -70,16 +75,16 @@
 
                      <h2>Group two</h2>
 
-                     <a class="tile wide imagetext bg-color-blue" href="./scaffolding.html">
+                     <a class="tile wide imagetext bg-color-blue" href="#">
                         <div class="image-wrapper">
-                           <img src="assets/img/My Apps.png" />
+                           <span class="icon icon-music-3"></span>
                         </div>
                         <div class="column-text">
-                           <div class="text">Grid system</div>
-                           <div class="text">Layouts</div>
-                           <div class="text">Responsive design</div>
+                           <div class="text">Top 10</div>
+                           <div class="text">Favorites</div>
+                           <div class="text">Best choices</div>
                         </div>
-                        <span class="app-label">SCAFFOLDING</span>
+                        <span class="app-label">MUSIC</span>
                      </a>
 
                      <a class="tile wide imagetext bg-color-blueDark" href="./base-css.html">
