--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -2,7 +2,7 @@
 
    <!-- Header
    ================================================== -->
-   <div id="nav-bar" class="-container">
+   <div id="nav-bar" class="">
       <div class="pull-left">
          <div id="header-container">
             <h5>{{appname}} Demo</h5>
@@ -20,7 +20,7 @@
       </div>
    </div>
 
-   <div id="metro-container" class="-container">
+   <!--<div id="metro-container" class="-container">-->
       <!--<div class="row">-->
          <!--<div id="hub" class="metro">-->
             <div class="metro panorama">
@@ -122,6 +122,6 @@
             <a id="panorama-scroll-next" href="#"></a>
          <!--</div>-->
       <!--</div>-->
-   </div>
+   <!--</div>-->
 
 </div>
