wip fixing panorama

--- a/less/bootmetro/bootmetro-ui-light.less
+++ b/less/bootmetro/bootmetro-ui-light.less
@@ -228,11 +228,11 @@ button[aria-checked=true]:active .win-commandring {
 
 
 
-button.win-command {
+.win-command {
    background-color: transparent;
    border-color:  transparent;
 }
-button.win-command:hover {
+.win-command:hover {
    background-color: transparent;
    border-color:  transparent;
 }
