--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -28,7 +28,50 @@
 
                   <div id="section1" class="panorama-section tile-span-4">
 
-                     <h2>Group One</h2>
+                     <h2>Featured pictures</h2>
+
+                     <!--<a class="tile widepeek" href="#">-->
+                        <!--<div class="tile wide image">-->
+                           <!--<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Darvasa_gas_crater_panorama.jpg/640px-Darvasa_gas_crater_panorama.jpg" alt=""/>-->
+                        <!--</div>-->
+                        <!--<div class="tile wide text bg-color-orange">-->
+                           <!--<div class="text5">The Door to Hell, a burning natural gas field in Derweze, Turkmenistan</div>-->
+                        <!--</div>-->
+                     <!--</a>-->
+
+                     <div class="tile-column-span-2">
+                        <a class="tile wide imagetext wideimage bg-color-blue" href="#">
+                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Darvasa_gas_crater_panorama.jpg/640px-Darvasa_gas_crater_panorama.jpg" alt=""/>
+                           <div class="textover-wrapper bg-color-blueDark">
+                              <div class="text2">The Door to Hell, a burning natural gas field in Derweze, Turkmenistan</div>
+                           </div>
+                        </a>
+
+                        <a class="tile wide imagetext wideimage bg-color-green" href="#">
+                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Lady_Elliot_Island_SVII.jpg/320px-Lady_Elliot_Island_SVII.jpg" alt=""/>
+                           <div class="textover-wrapper bg-color-greenDark">
+                              <div class="text2">An image of the coral reef near Lady Elliot Island</div>
+                           </div>
+                        </a>
+                     </div>
+
+                     <div class="tile-column-span-1">
+                        <a class="tile squarepeek bg-color-orange" href="#">
+                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Magnificent_CME_Erupts_on_the_Sun_-_August_31.jpg/320px-Magnificent_CME_Erupts_on_the_Sun_-_August_31.jpg" alt=""/>
+                           <div class="text-inner">
+                              <div class="text4">Magnificent CME Erupts on the Sun - August 31</div>
+                           </div>
+                        </a>
+
+                     </div>
+
+
+
+
+
+                  </div>
+
+                  <div id="section2" class="panorama-section tile-span-4">
 
                      <a class="tile app bg-color-orange" href="#">
                         <div class="image-wrapper">
@@ -71,7 +114,7 @@
 
                   </div>
 
-                  <div id="section2" class="panorama-section tile-span-4">
+                  <div id="section3" class="panorama-section tile-span-4">
 
                      <h2>Group two</h2>
 
@@ -100,7 +143,7 @@
                         <span class="app-label">BASE CSS</span>
                      </a>
 
-                     <a class="tile app bg-color-orange" href="./components.html">
+                     <a class="tile app bg-color-orange" href="#">
                         <div class="image-wrapper">
                            <img src="assets/img/RegEdit.png" alt="" />
                         </div>
