--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -361,7 +361,7 @@
    }
    .tile.squarepeek {
       width: 150px;
-      height: 300px;
+      height: 312px;
 
       img {
          width: 150px;
@@ -492,7 +492,7 @@
 #panorama-scroll-next {
    position: absolute;
    top: 132px;
-   left: 0;
+   left: 4px;
 
    .win-commandicon;
    .win-commandring;
@@ -512,7 +512,7 @@
 }
 #panorama-scroll-next {
    left: auto;
-   right: 0;
+   right: 4px;
 }
 
 #panorama-scroll-prev:hover,
