--- a/templates/demo/_layout.mustache
+++ b/templates/demo/_layout.mustache
@@ -75,6 +75,7 @@
    <script type="text/javascript" src="assets/js/bootmetro-charms.js"></script>
    <script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
 
+   <script type="text/javascript" src="assets/js/jquery.mousewheel.min.js"></script>
    <script type="text/javascript" src="assets/js/jquery.touchSwipe.min.js"></script>
 
    <script type="text/javascript" src="assets/js/holder.js"></script>
