--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -8,7 +8,7 @@
             <h5>{{appname}} Demo</h5>
             <div class="dropdown">
                <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
-                  Start
+                  Wikipedia Featured
                   <b class="caret"></b>
                </a>
                {{>headermenu}}
@@ -26,7 +26,7 @@
             <div class="metro panorama">
                <div class="panorama-sections">
 
-                  <div id="section1" class="panorama-section tile-span-4">
+                  <div class="panorama-section">
 
                      <h2>Featured pictures</h2>
 
@@ -49,29 +49,70 @@
 
                         <a class="tile wide imagetext wideimage bg-color-green" href="#">
                            <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Lady_Elliot_Island_SVII.jpg/320px-Lady_Elliot_Island_SVII.jpg" alt=""/>
-                           <div class="textover-wrapper bg-color-greenDark">
+                           <div class="textover-wrapper transparent">
                               <div class="text2">An image of the coral reef near Lady Elliot Island</div>
                            </div>
                         </a>
+
+                        <a class="tile square image bg-color-red" href="#">
+                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Wulfenite_mexique.jpg/611px-Wulfenite_mexique.jpg" alt=""/>
+                           <div class="textover-wrapper transparent">
+                              <div class="text2">Wulfenite </div>
+                           </div>
+                        </a>
+
+                        <a class="tile square image" href="#">
+                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/22/Hagia_Sophia_Mars_2013.jpg/640px-Hagia_Sophia_Mars_2013.jpg" alt=""/>
+                           <div class="textover-wrapper transparent">
+                              <div class="text2">Hagia Sophia</div>
+                           </div>
+                        </a>
+
                      </div>
 
                      <div class="tile-column-span-1">
                         <a class="tile squarepeek bg-color-orange" href="#">
-                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Magnificent_CME_Erupts_on_the_Sun_-_August_31.jpg/320px-Magnificent_CME_Erupts_on_the_Sun_-_August_31.jpg" alt=""/>
+                           <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Anastomus_oscitans_-_Bueng_Boraphet.jpg/384px-Anastomus_oscitans_-_Bueng_Boraphet.jpg" alt=""/>
                            <div class="text-inner">
-                              <div class="text4">Magnificent CME Erupts on the Sun - August 31</div>
+                              <div class="text4">The Asian Openbill or Asian Openbill Stork (Anastomus oscitans) is a large wading bird in the stork family Ciconiidae.</div>
+                           </div>
+                        </a>
+
+                     </div>
+
+                  </div>
+
+                  <div class="panorama-section">
+
+                     <h2>Featured articles</h2>
+
+                     <div class="tile-column-span-2">
+                        <a class="tile widepeek" href="#">
+                           <div class="tile wide image">
+                              <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Fuso_Trial_Heading_Left.jpg/640px-Fuso_Trial_Heading_Left.jpg" alt=""/>
+                           </div>
+                           <div class="tile wide text">
+                              <div class="text-header">Fusō</div>
+                              <div class="text4">Japanese battleship Fusō (扶桑, a classical name for Japan) was the lead ship of the two Fusō-class dreadnought battleships built for the Imperial Japanese Navy.</div>
+                           </div>
+                        </a>
+
+                        <a class="tile wide imagetext wideimage bg-color-green" href="#">
+                           <img src="http://upload.wikimedia.org/wikipedia/en/e/e9/Famous_Fantastic_Mysteries_August_1942_cover.jpg" alt=""/>
+                           <div class="textover-wrapper transparent">
+                              <div class="text2">Famous Fantastic Mysteries</div>
                            </div>
                         </a>
 
                      </div>
 
 
-
-
-
                   </div>
 
-                  <div id="section2" class="panorama-section tile-span-4">
+
+                  <div class="panorama-section tile-span-4">
+
+                     <h2>Featured apps</h2>
 
                      <a class="tile app bg-color-orange" href="#">
                         <div class="image-wrapper">
@@ -114,7 +155,7 @@
 
                   </div>
 
-                  <div id="section3" class="panorama-section tile-span-4">
+                  <div class="panorama-section tile-span-4">
 
                      <h2>Group two</h2>
 
