--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -69,7 +69,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
             </button>
-            <h1 class="brand">BootMetro <small>documentation</small></h1>
+            <h1 class="brand"><a href="./index.html">BootMetro</a> <small>documentation</small></h1>
             <div class="nav-collapse collapse">
                <ul class="nav">
                   <li class="{{docs-index}}">
