--- a/templates/docs/docs-index.mustache
+++ b/templates/docs/docs-index.mustache
@@ -79,6 +79,38 @@
 </div>
 
 
+<!-- Browsers
+================================================== -->
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="browsers">Browsers support</h1>
+   </div>
+
+   <p class="lead">
+      BootMetro support the following browsers:
+      <ul id="browsers" class="inline">
+         <li>
+            <i class="icon-chrome"></i>
+         </li>
+         <li>
+            <i class="icon-firefox"></i>
+         </li>
+         <li>
+            <i class="icon-opera"></i>
+         </li>
+         <li>
+            <i class="icon-safari"></i>
+         </li>
+         <li>
+            <i class="icon-IE"></i> (latest versions)
+         </li>
+      </ul>
+   </p>
+
+</div>
+
+
+
 
 <!-- File structure
 ================================================== -->
@@ -134,6 +166,27 @@
 </pre>
    <p>This is the most basic form of BootMetro: compiled files for quick drop-in usage in nearly any web project. We provide compiled CSS and JS (<code>bootmetro-*.*</code>), as well as compiled and minified CSS and JS (<code>bootmetro.min.*</code>). The image files are compressed using <a href="http://imageoptim.com/">ImageOptim</a>, a Mac app for compressing PNGs.</p>
    <p>Please note that all JavaScript plugins require jQuery to be included.</p>
+</div>
+
+
+<!-- Build from source
+================================================== -->
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="howtobuild">Building from source</h1>
+   </div>
+
+   <h2 id="prepare-env">Prepare your environment</h2>
+   <p>
+      <ul>
+         <li>Install <a href="http://nodejs.org/">Node.js</a> and NPM (should come with)</li>
+         <li>Install global dev dependencies: <code>npm install -g grunt-cli karma</code></li>
+         <li>Instal local dev dependencies: <code>npm install</code> while current directory is bootmetro repo</li>
+      </ul>
+   </p>
+
+   <h2 id="build">Build</h2>
+   <p>To build the whole project run <code>grunt</code></p>
 </div>
 
 
