--- a/templates/docs/sidebar_partials/sidebar-docs-index.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-index.mustache
@@ -2,6 +2,7 @@
    <li><a href="#getting-started">Getting started</a></li>
    <li><a href="#browsers">Browsers support</a></li>
    <li><a href="#file-structure">File structure</a></li>
+   <li><a href="#howtobuild">Building from source</a></li>
    <li>
       <a href="#toc">Documentation Index</a>
    </li>
