--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -204,6 +204,8 @@
             </div>
             <a id="panorama-scroll-prev" href="#"></a>
             <a id="panorama-scroll-next" href="#"></a>
+            <div id="panorama-scroll-prev-bkg"></div>
+            <div id="panorama-scroll-next-bkg"></div>
          <!--</div>-->
       <!--</div>-->
    <!--</div>-->
