fixing gh_pages

--- a/templates/pages/index2.mustache
+++ b/templates/pages/index2.mustache
@@ -1,7 +1,7 @@
 <!-- Header
 ================================================== -->
 <header id="nav-bar" class="container">
-   <h1>bootmetro <small>metro style web framework</small></h1>
+   <h1><img src="assets/img/logo.png" width="60" height="60" alt="logo" />bootmetro <small>metro style web framework</small></h1>
    <!--<h2>Metro style web framework</h2>-->
 </header>
 
@@ -9,10 +9,10 @@
 <div id="header-nav" class="container">
    <ul class="nav nav-links">
       <li>
-         <a href="./demo-hub.html">Demo</a>
+         <a href="./demo/demo-hub.html">Demo</a>
       </li>
       <li>
-         <a href="./docs.html">documentation</a>
+         <a href="./docs/docs-index.html">documentation</a>
       </li>
       <li>
          <a href="#">downloads</a>
