--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -1,7 +1,7 @@
 <!-- Header
 ================================================== -->
 <header id="nav-bar" class="container">
-   <h1><img src="assets/img/logo.png" width="60" height="60" alt="logo" />bootmetro <small>metro style web framework</small></h1>
+   <h1><img src="assets/img/logo.png" width="60" height="60" alt="logo" class="logo" />bootmetro <small>metro style web framework</small></h1>
    <!--<h2>Metro style web framework</h2>-->
 </header>
 
@@ -9,16 +9,16 @@
 <div id="header-nav" class="container">
    <ul class="nav nav-links">
       <li>
-         <a href="./demo/hub.html">Demo</a>
-      </li>
-      <li>
-         <a href="./docs/docs-index.html">documentation</a>
+         <a href="./about.html">about</a>
       </li>
       <li>
          <a href="#">downloads</a>
       </li>
       <li>
-         <a href="./about.html">about</a>
+         <a href="./demo/hub.html">Demo</a>
+      </li>
+      <li>
+         <a href="./docs/docs-index.html">documentation</a>
       </li>
    </ul>
 </div>
