--- a/templates/pages/about.mustache
+++ b/templates/pages/about.mustache
@@ -1,25 +1,27 @@
 <!-- Header
 ================================================== -->
-<header id="nav-bar" class="container">
-   <div class="row">
-      <div class="span12">
-         <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./index.html"></a>
-            <h5>{{appname}}</h5>
-            <a class="header-dropdown accent-color" href="#" >
-               {{_i}}About &amp; Credits{{/i}}
-            </a>
+<div id="nav-bar" class="container">
+   <div class="pull-left">
+      <div id="header-container">
+         <a id="backbutton" class="win-backbutton" href="./index.html"></a>
+         <div class="dropdown">
+            <h1 class="header-dropdown accent-color">About</h1>
          </div>
       </div>
    </div>
-</header>
+   <div class="pull-right">
+      <h2><img src="assets/img/logo.png" width="60" height="60" alt="logo" class="logo"/>bootmetro <small>metro style web framework</small></h2>
+   </div>
+</div>
+
 
 <div class="container">
    <div class="row">
-      <div class="span12">
+      <div class="span6">
 
-         <h1>About <small></small></h1>
+         <h2>The birth of an idea</h2>
          <p class="lead">
+            <!--<img src="assets/img/logo.png" width="188" height="188" alt="logo" class="pull-right with-margin-left with-margin-bottom" />-->
             Early in 2012, when Microsoft released the first beta of Windows 8 I finally had the opportunity to try the "Metro UI" (now renamed to... Windows 8 App Store style).
             At that time the UI guidelines was almost done, and also the "direction" set by microsoft was clear. I looked for other references of Metro style around the web, and there was nothing or little info apart the official one.
             <br/>
@@ -29,6 +31,11 @@
             At the same time I found the project MetroUI-CSS, by Sergey Pimenov, that evidently have had the same idea, but with some missing things from the original Metro guidelines, but his development was already ahead of mine.
             So, that's the story that started all about BootMetro!
          </p>
+      </div>
+
+      <div class="span6">
+         <h2>The road to ninja <small></small></h2>
+         <p class="lead">BootMetro will continue to evolve with the intent to provide a great user experience where is better focus on the content of applications, relying more on typography and less on graphics ("content before chrome").</p>
 
          <h2>Author</h2>
          <p class="lead">
@@ -39,7 +46,7 @@
          <p class="lead">
             I wish to thank Alexander Finger &amp; David Smith for their support and all the githubbers who keep me on the road to improve the project.
          </p>
-
       </div>
+
    </div>
 </div>
