--- a/templates/docs/docs-index.mustache
+++ b/templates/docs/docs-index.mustache
@@ -180,7 +180,7 @@
    <p>
       <ul>
          <li>Install <a href="http://nodejs.org/">Node.js</a> and NPM (should come with)</li>
-         <li>Install global dev dependencies: <code>npm install -g grunt-cli karma</code></li>
+         <li>Install global dev dependencies (Windows users should run it as administrator): <code>npm install -g grunt-cli karma</code></li>
          <li>Instal local dev dependencies: <code>npm install</code> while current directory is bootmetro repo</li>
       </ul>
    </p>
