--- a/templates/docs/docs-javascript.mustache
+++ b/templates/docs/docs-javascript.mustache
@@ -1373,21 +1373,21 @@
          </ol>
          <div class="carousel-inner">
             <div class="item active">
-               <img src="assets/img/bootstrap-mdo-sfmoma-01.jpg" alt="">
+               <img src="{{assetspath}}assets/img/bootstrap-mdo-sfmoma-01.jpg" alt="">
                <div class="carousel-caption">
                   <h4>First Thumbnail label</h4>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                </div>
             </div>
             <div class="item">
-               <img src="assets/img/bootstrap-mdo-sfmoma-02.jpg" alt="">
+               <img src="{{assetspath}}assets/img/bootstrap-mdo-sfmoma-02.jpg" alt="">
                <div class="carousel-caption">
                   <h4>Second Thumbnail label</h4>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                </div>
             </div>
             <div class="item">
-               <img src="assets/img/bootstrap-mdo-sfmoma-03.jpg" alt="">
+               <img src="{{assetspath}}assets/img/bootstrap-mdo-sfmoma-03.jpg" alt="">
                <div class="carousel-caption">
                   <h4>Third Thumbnail label</h4>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -1525,21 +1525,21 @@
             <div id="myFlipview" class="carousel flipview slide span4">
                <div class="carousel-inner">
                   <div class="item active">
-                     <img src="assets/img/sample-1.jpg" alt="">
+                     <img src="{{assetspath}}assets/img/sample-1.jpg" alt="">
                      <div class="carousel-caption">
                         <h4>First Thumbnail label</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                      </div>
                   </div>
                   <div class="item">
-                     <img src="assets/img/sample-2.jpg" alt="">
+                     <img src="{{assetspath}}assets/img/sample-2.jpg" alt="">
                      <div class="carousel-caption">
                         <h4>Second Thumbnail label</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                      </div>
                   </div>
                   <div class="item">
-                     <img src="assets/img/sample-3.jpg" alt="">
+                     <img src="{{assetspath}}assets/img/sample-3.jpg" alt="">
                      <div class="carousel-caption">
                         <h4>Third Thumbnail label</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
