fixing carousel & flipview

--- a/less/bootmetro/carousel.less
+++ b/less/bootmetro/carousel.less
@@ -6,4 +6,13 @@
    font-size: 40px;
    line-height: 40px;
    border-width: 2px;
+
+   &.left {
+      content: "\e127";
+   }
+   &.right {
+      content: "\e12a";
+   }
 }
+
+
