--- a/templates/docs/docs-javascript.mustache
+++ b/templates/docs/docs-javascript.mustache
@@ -1546,8 +1546,8 @@
                      </div>
                   </div>
                </div>
-               <a class="left carousel-control" href="#myFlipview" data-slide="prev">&#xe127;</a>
-               <a class="right carousel-control" href="#myFlipview" data-slide="next">&#xe12a;</a>
+               <a class="left carousel-control" href="#myFlipview" data-slide="prev"></a>
+               <a class="right carousel-control" href="#myFlipview" data-slide="next"></a>
             </div>
          </div>
       </div>
@@ -1561,8 +1561,8 @@
        &lt;div class="item"&gt;…&lt;/div&gt;
      &lt;/div&gt;
      &lt;!-- Carousel nav --&gt;
-     &lt;a class="carousel-control left" href="#myFlipview" data-slide="prev"&gt;&amp;#xe127;&lt;/a&gt;
-     &lt;a class="carousel-control right" href="#myFlipview" data-slide="next"&gt;&amp;#xe12a;&lt;/a&gt;
+     &lt;a class="carousel-control left" href="#myFlipview" data-slide="prev"&gt;&lt;/a&gt;
+     &lt;a class="carousel-control right" href="#myFlipview" data-slide="next"&gt;&lt;/a&gt;
    &lt;/div&gt;
    </pre>
 
