fixing carousel & flipview

--- a/less/bootmetro/carousel.less
+++ b/less/bootmetro/carousel.less
@@ -7,11 +7,11 @@
    line-height: 40px;
    border-width: 2px;
 
-   &.left {
-      content: "\e127";
-   }
-   &.right {
+   &.right:after {
       content: "\e12a";
+   }
+   &.left:after {
+      content: "\e127";
    }
 }
 
