--- a/less/bootmetro/flipview.less
+++ b/less/bootmetro/flipview.less
@@ -20,11 +20,15 @@
       &.right {
          left: auto;
          right: 0;
+      }
+
+      &.right:after {
          content: "\e12a";
       }
-      &.left {
+      &.left:after {
          content: "\e127";
       }
+
 
       // Hover state
       &:hover {
