--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -130,13 +130,13 @@
    <![endif]-->
 
    <script type="text/javascript" src="{{assetspath}}assets/js/google-code-prettify/prettify.js"></script>
-   <script type="text/javascript" src="{{assetspath}}assets/js/bootstrap.min.js"></script>
+   <script type="text/javascript" src="{{assetspath}}assets/js/min/bootstrap.min.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootmetro-charms.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootstrap-datepicker.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/holder.js"></script>
-   <script type="text/javascript" src="{{assetspath}}assets/js/Chart.min.js"></script>
+   <script type="text/javascript" src="{{assetspath}}assets/js/min/Chart.min.js"></script>
 
    <script type="text/javascript" src="{{assetspath}}assets/js/docs.js"></script>
 </body>
