--- a/templates/docs/docs-javascript.mustache
+++ b/templates/docs/docs-javascript.mustache
@@ -1394,8 +1394,8 @@
                </div>
             </div>
          </div>
-         <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe127;</a>
-         <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe12a;</a>
+         <a class="left carousel-control" href="#myCarousel" data-slide="prev"></a>
+         <a class="right carousel-control" href="#myCarousel" data-slide="next"></a>
       </div>
    </div>
    <pre class="prettyprint linenums">
@@ -1412,8 +1412,8 @@
        &lt;div class="item"&gt;…&lt;/div&gt;
      &lt;/div&gt;
      &lt;!-- Carousel nav --&gt;
-     &lt;a class="carousel-control left" href="#myCarousel" data-slide="prev"&gt;&amp;lsaquo;&lt;/a&gt;
-     &lt;a class="carousel-control right" href="#myCarousel" data-slide="next"&gt;&amp;rsaquo;&lt;/a&gt;
+     &lt;a class="carousel-control left" href="#myCarousel" data-slide="prev"&gt;&lt;/a&gt;
+     &lt;a class="carousel-control right" href="#myCarousel" data-slide="next"&gt;&lt;/a&gt;
    &lt;/div&gt;
    </pre>
 
