--- a/templates/docs/docs-index.mustache
+++ b/templates/docs/docs-index.mustache
@@ -4,9 +4,9 @@
    <p class="lead">This is the right place where to find all the stuff needed to build a Metro web application.</p>
 </div>
 
-<div class="bs-docs-section">
+<div id="getting-started" class="bs-docs-section">
    <div class="page-header">
-      <h1 id="getting-started">Getting started</h1>
+      <h1>Getting started</h1>
    </div>
 
    <p class="lead">
@@ -81,9 +81,9 @@
 
 <!-- Browsers
 ================================================== -->
-<div class="bs-docs-section">
+<div id="browsers" class="bs-docs-section">
    <div class="page-header">
-      <h1 id="browsers">Browsers support</h1>
+      <h1>Browsers support</h1>
    </div>
 
    <p class="lead">
@@ -111,12 +111,11 @@
 
 
 
-
 <!-- File structure
 ================================================== -->
-<div class="bs-docs-section">
+<div id="file-structure" class="bs-docs-section">
    <div class="page-header">
-      <h1 id="file-structure">File structure</h1>
+      <h1>File structure</h1>
    </div>
    <p class="lead">Within the download you'll find the following file structure and contents, logically grouping common assets and providing both compiled and minified variations.</p>
    <p>Once downloaded, unzip the compressed folder to see the structure of (the compiled) Bootstrap. You'll see something like this:</p>
@@ -171,9 +170,9 @@
 
 <!-- Build from source
 ================================================== -->
-<div class="bs-docs-section">
+<div id="howtobuild" class="bs-docs-section">
    <div class="page-header">
-      <h1 id="howtobuild">Building from source</h1>
+      <h1>Building from source</h1>
    </div>
 
    <h2 id="prepare-env">Prepare your environment</h2>
