--- a/templates/docs/partials/grid.mustache
+++ b/templates/docs/partials/grid.mustache
@@ -295,7 +295,7 @@
 <p><span class="label label-info">Heads up!</span>  Bootstrap doesn't include responsive features by default at this time as not everything needs to be responsive. Instead of encouraging developers to remove this feature, we figure it best to enable it as needed.</p>
 
 <h2>About responsive Bootstrap</h2>
-<img src="assets/img/responsive-illustrations.png" alt="Responsive devices" style="float: right; margin: 0 0 20px 20px;">
+<img src="{{assetspath}}assets/img/responsive-illustrations.png" alt="Responsive devices" style="float: right; margin: 0 0 20px 20px;">
 <p>Media queries allow for custom CSS based on a number of conditions&mdash;ratios, widths, display type, etc&mdash;but usually focuses around <code>min-width</code> and <code>max-width</code>.</p>
 <ul>
    <li>Modify the width of column in our grid</li>
