--- a/templates/demo/_layout.mustache
+++ b/templates/demo/_layout.mustache
@@ -63,7 +63,7 @@
    {{>charms}}
 
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+   <script src="//code.jquery.com/jquery-1.10.0.min.js"></script>
    <script>window.jQuery || document.write("<script src='assets/js/jquery-1.10.0.min.js'>\x3C/script>")</script>
 
    <!--[if IE 7]>
