--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -122,8 +122,8 @@
    </footer>
 
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-   <script>window.jQuery || document.write("<script src='assets/js/jquery-1.10.0.min.js'>\x3C/script>")</script>
+   <script src="//code.jquery.com/jquery-1.10.0.min.js"></script>
+   <script>window.jQuery || document.write("<script src='{{assetspath}}assets/js/jquery-1.10.0.min.js'>\x3C/script>")</script>
 
    <!--[if IE 7]>
    <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
